# angel

./: Cargo.toml  sqlite-data.db-journal
benches/: perf_harness.rs
bins/torii-arcade/: Cargo.toml
bins/torii-arcade/src/: main.rs
bins/torii-erc20/: Cargo.toml
bins/torii-erc20-synth/src/: main.rs
bins/torii-erc20/src/: main.rs
bins/torii-introspect-bin/: Cargo.toml
bins/torii-introspect-bin/src/: config.rs  main.rs
bins/torii-introspect-synth/: Cargo.toml
bins/torii-introspect-synth/src/: main.rs
bins/torii-tokens/: Cargo.toml
bins/torii-tokens-synth/: Cargo.toml
bins/torii-tokens-synth/src/: main.rs
bins/torii-tokens/src/: main.rs
crates/arcade-sink/: Cargo.toml
crates/arcade-sink/src/: grpc_service.rs  sink.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  events.rs  extractor.rs  felt.rs  lib.rs
crates/dojo/: Cargo.toml
crates/dojo/migrations/postgres/: 001_dojo_store.sql
crates/dojo/src/: decoder.rs  error.rs  event.rs  external_contract.rs  table.rs
crates/dojo/src/store/: json.rs  mod.rs  postgres.rs  sql.rs  sqlite.rs
crates/introspect/: Cargo.toml
crates/introspect-sql-sink/: Cargo.toml
crates/introspect-sql-sink/migrations/postgres/: 001_domains.sql  002_metadata_function.sql  003_store.sql
crates/introspect-sql-sink/migrations/sqlite/: 001_init.sql  002_schema_state.sql
crates/introspect-sql-sink/src/: backend.rs  error.rs  lib.rs  namespace.rs  processor.rs  runtime.rs  sink.rs  table.rs  tables.rs
crates/introspect-sql-sink/src/postgres/: append_only.rs  backend.rs  create.rs  handler.rs  insert.rs  json.rs  mod.rs  query.rs  types.rs  upgrade.rs  utils.rs
crates/introspect-sql-sink/src/sqlite/: append_only.rs  backend.rs  json.rs  mod.rs  record.rs  table.rs  types.rs
crates/introspect/src/: events.rs  schema.rs  store.rs  tables.rs  types.rs
crates/introspect/src/postgres/: global.rs  owned.rs  types.rs
crates/pathfinder/: Cargo.toml
crates/pathfinder/src/: decoding.rs  extractor.rs  fetcher.rs  lib.rs  sqlite.rs  test.rs
crates/sql/: Cargo.toml
crates/sql/src/: connection.rs  lib.rs  migrate.rs  pool.rs  query.rs  runtime.rs  types.rs
crates/sql/src/postgres/: migrate.rs  mod.rs  types.rs
crates/sql/src/sqlite/: migrate.rs  mod.rs  types.rs
crates/testing/: Cargo.toml
crates/testing/src/: dojo.rs  event_reader.rs  lib.rs
crates/torii-common/: Cargo.toml
crates/torii-common/src/: lib.rs  metadata.rs  token_uri.rs  utils.rs
crates/torii-controllers-sink/: Cargo.toml
crates/torii-controllers-sink/src/: lib.rs
crates/torii-ecs-sink/: Cargo.toml
crates/torii-ecs-sink/src/: grpc_service.rs  sink.rs
crates/torii-ecs-sink/tests/: sqlite_prepared_statements.rs
crates/torii-erc1155/: Cargo.toml
crates/torii-erc1155/src/: balance_fetcher.rs  decoder.rs  grpc_service.rs  handlers.rs  identification.rs  lib.rs  sink.rs  storage.rs  synthetic.rs
crates/torii-erc20/: Cargo.toml
crates/torii-erc20/src/: .sink.rs  balance_fetcher.rs  decoder.rs  event.rs  grpc_service.rs  handlers.rs  identification.rs  lib.rs  storage.rs  synthetic.rs
crates/torii-erc20/src/sink/: mod.rs
crates/torii-erc20/src/sink/sqlite/: mod.rs
crates/torii-erc721/: Cargo.toml
crates/torii-erc721/src/: conversions.rs  decoder.rs  grpc_service.rs  handlers.rs  identification.rs  lib.rs  sink.rs  storage.rs  synthetic.rs
crates/torii-log-sink/: Cargo.toml
crates/torii-log-sink/src/: decoder.rs
crates/torii-runtime-common/: Cargo.toml
crates/torii-runtime-common/src/: database.rs
crates/torii-sql-sink/: Cargo.toml
crates/torii-sql-sink/src/: decoder.rs  lib.rs  samples.rs
crates/types/: Cargo.toml
crates/types/src/: block.rs  event.rs
examples/eventbus_only_sink/: main.rs
examples/http_only_sink/: main.rs
examples/introspect/: restart.rs
examples/pathfinder/: main.rs
src/: lib.rs
src/etl/: engine_db.rs  envelope.rs  mod.rs
src/etl/decoder/: context.rs  mod.rs
src/etl/extractor/: composite.rs  event.rs  event_common.rs  global_event.rs  mod.rs  sample.rs  starknet_helpers.rs  synthetic_adapter.rs  synthetic_erc20.rs
src/etl/identification/: registry.rs  rule.rs
