[workspace]
members = [
  ".",
  "crates/torii-common",
  "crates/torii-config-common",
  "crates/torii-runtime-common",
  "crates/torii-sql-sink",
  "crates/torii-log-sink",
  "crates/torii-controllers-sink",
  "crates/arcade-sink",
  "crates/torii-ecs-sink",
  "crates/torii-erc20",
  "crates/torii-erc721",
  "crates/torii-erc1155",
  "crates/sql",
  "crates/introspect",
  "crates/dojo",
  "crates/introspect-sql-sink",
  "crates/testing",
  "crates/pathfinder",
  "crates/types",
  "bins/torii-erc20",
  "bins/torii-erc20-synth",
  "bins/torii-introspect-bin",
  "bins/torii-introspect-synth",
  "bins/torii-arcade",
  "bins/torii-tokens",
  "bins/torii-tokens-synth",
]
default-members = [
  "bins/torii-erc20",
  "bins/torii-arcade",
  "bins/torii-tokens",
  "bins/torii-introspect-bin",
]
resolver = "2"


[package]
name = "torii"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC and protobuf
# Keep older version for now due to some compatibility issues with newer axum: https://github.com/hyperium/tonic/issues/1964.
tonic = { version = "0.12", features = ["gzip"] }
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP server and routing
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
log = "0.4.29"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Starknet
starknet = "0.17"

# Database
sqlx = { git = "https://github.com/bengineer42/sqlx", version = "0.8.6", features = [
  "runtime-tokio",
], rev = "22a01d3" } # Used patched version of sqlx with SqliteConnectOptions support (PR in progress: https://github.com/launchbadge/sqlx/pull/4209)
crc = "3.4.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }

# Hashing
blake3 = "1.8.3"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }

# ETL Pipeline dependencies
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"
bitflags = "2.6"
tokio-util = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "2.0.17"

# Types
hex = "0.4"
primitive-types = { version = "0.14.0", features = ["serde"] }
starknet-types-core = "0.2.0"
bigdecimal = "0.4.10"
starknet-types-raw = { git = "https://github.com/cartridge-gg/starknet-types-raw", branch = "main" }

# Build
tonic-build = "0.12"

# Introspect
introspect-events = { git = "https://github.com/cartridge-gg/introspect", rev = "b89ee9e" }
introspect-types = { git = "https://github.com/cartridge-gg/introspect", rev = "b89ee9e" }
introspect-rust-macros = { git = "https://github.com/cartridge-gg/introspect", rev = "b89ee9e" }
dojo-introspect = { git = "https://github.com/dojoengine/dojo-introspect", rev = "c45d711" }


# Utils
resolve-path = "0.1.0"
itertools = "0.14.0"
bincode = { version = "2.0.0" }

# Torii core
torii.path = "."
torii-common = { path = "crates/torii-common" }
torii-config-common = { path = "crates/torii-config-common" }
torii-runtime-common = { path = "crates/torii-runtime-common" }

# Internal crates
torii-sql = { path = "crates/sql" }
torii-sql-sink.path = "crates/torii-sql-sink"
torii-log-sink.path = "crates/torii-log-sink"
torii-controllers-sink.path = "crates/torii-controllers-sink"
torii-arcade-sink.path = "crates/arcade-sink"
torii-ecs-sink.path = "crates/torii-ecs-sink"
torii-erc20.path = "crates/torii-erc20"
torii-erc721.path = "crates/torii-erc721"
torii-erc1155.path = "crates/torii-erc1155"
torii-dojo.path = "./crates/dojo"
torii-introspect.path = "crates/introspect"
torii-introspect-sql-sink.path = "./crates/introspect-sql-sink"
torii-test-utils.path = "crates/testing"
torii-pathfinder.path = "crates/pathfinder"
torii-types.path = "crates/types"

[lib]
name = "torii"
path = "src/lib.rs"

[[example]]
name = "simple_sql_sink"
path = "examples/simple_sql_sink/main.rs"

[[example]]
name = "multi_sink_example"
path = "examples/multi_sink_example/main.rs"

[[example]]
name = "eventbus_only_sink"
path = "examples/eventbus_only_sink/main.rs"

[[example]]
name = "http_only_sink"
path = "examples/http_only_sink/main.rs"

[[example]]
name = "test_block_extractor"
path = "examples/test_block_extractor/main.rs"

[[example]]
name = "introspect_restart"
path = "examples/introspect/restart.rs"

[[example]]
name = "pathfinder"
path = "examples/pathfinder/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
futures.workspace = true
hyper.workspace = true
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
prost-types.workspace = true
rustls-pemfile = "2.0"
serde_json.workspace = true
serde.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
starknet.workspace = true
starknet-types-raw = { workspace = true, features = ["events"] }
tokio-stream.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = [
  "logging",
  "tls12",
  "ring",
] }
tokio-util.workspace = true
tokio.workspace = true
tonic-reflection.workspace = true
tonic-web.workspace = true
tonic.workspace = true
torii-common.workspace = true
torii-types = { workspace = true, features = ["field"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
prost.workspace = true
xxhash-rust.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tempfile = "3.13"
tracing-subscriber.workspace = true
tower.workspace = true
resolve-path.workspace = true
itertools.workspace = true
dojo-introspect.workspace = true
primitive-types.workspace = true


torii-sql = { workspace = true, features = ["postgres", "sqlite"] }
torii-sql-sink.workspace = true
torii-log-sink.workspace = true
torii-erc20.workspace = true
torii-erc721.workspace = true
torii-erc1155.workspace = true
torii-dojo = { workspace = true, features = ["postgres", "sqlite"] }
torii-introspect.workspace = true
torii-common.workspace = true
torii-test-utils.workspace = true
torii-introspect-sql-sink = { workspace = true, features = [
  "postgres",
  "sqlite",
] }
torii-pathfinder.workspace = true
# Example dependencies


[[bench]]
name = "perf_harness"
harness = false

[workspace.lints.rust]
# Deny unsafe code unless explicitly allowed
unsafe_code = "warn"
# Require documentation for public items (disabled for now - enable gradually)
# missing_docs = "warn"

[workspace.lints.clippy]
# Clippy lint groups (set lower priority so individual lints can override)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific denies (serious issues) - disabled for now, enable gradually
# unwrap_used = "warn"
# expect_used = "warn"
# panic = "warn"
todo = "warn"
unimplemented = "warn"

# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"

# Documentation lints - allow for now (enable gradually)
doc_markdown = "allow"
missing_docs_in_private_items = "allow"

# Cast lints - common in blockchain code dealing with u64/i64
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"

# Other noisy lints
similar_names = "allow"
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
cognitive_complexity = "allow"
too_many_arguments = "allow"
struct_field_names = "allow"
redundant_pub_crate = "allow"
return_self_not_must_use = "allow"
iter_without_into_iter = "allow"
option_if_let_else = "allow"
use_self = "allow"

# Generated code lints (protobuf)
default_constructed_unit_structs = "allow"

# Allow for now - these need gradual fixing
unused_async = "allow"
future_not_send = "allow"
result_large_err = "allow"
type_complexity = "allow"
needless_pass_by_value = "allow"

# Code style lints - allow for now
derive_partial_eq_without_eq = "allow"
or_fun_call = "allow"
format_push_string = "allow"
format_in_format_args = "allow"
unreadable_literal = "allow"
needless_continue = "allow"
manual_let_else = "allow"
default_trait_access = "allow"
items_after_statements = "allow"
unnecessary_wraps = "allow"
missing_fields_in_debug = "allow"
unused_self = "allow"
doc_lazy_continuation = "allow"

[lints]
workspace = true
