[package]
name = "torii-introspect-synth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "torii-introspect-synth"
path = "src/main.rs"

[dependencies]
torii.workspace = true
torii-dojo = { workspace = true, features = ["postgres"] }
torii-introspect-sql-sink = { workspace = true, features = ["postgres"] }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
starknet = "0.17"
dojo-introspect.workspace = true
introspect-types.workspace = true
starknet-types-raw.workspace = true
torii-types.workspace = true


[lints]
workspace = true
