[package]
name = "torii-tokens"
version = "0.1.4"
edition = "2021"
description = "Unified token indexer for ERC20, ERC721, and ERC1155 on Starknet"

[[bin]]
name = "torii-tokens"
path = "src/main.rs"

[dependencies]
# Core dependencies
torii.workspace = true
torii-common.workspace = true
torii-config-common.workspace = true
torii-runtime-common.workspace = true
torii-erc20.workspace = true
torii-erc721.workspace = true
torii-erc1155.workspace = true
torii-sql = { workspace = true, features = ["postgres", "sqlite"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Starknet
starknet = "0.17"
url = "2.5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
anyhow = "1.0"

# gRPC
tonic = { version = "0.12", features = ["gzip"] }
tonic-web = "0.12"
tonic-reflection = "0.12"

# Profiling (optional, enable with --features profiling)
[dependencies.pprof]
version = "0.13"
features = ["flamegraph", "prost-codec"]
optional = true

[features]
profiling = ["pprof"]

[lints]
workspace = true
