[package]
name = "torii-arcade-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
torii = { path = "../.." }
torii-common = { path = "../torii-common" }
torii-introspect = { path = "../introspect" }
torii-erc721 = { path = "../torii-erc721" }
torii-sql = { path = "../sql", features = ["postgres", "sqlite"] }
torii-runtime-common.workspace = true

anyhow.workspace = true
async-trait.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "postgres", "any"] }
starknet.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tempfile = "3.13"

[lints]
workspace = true
