[package]
name = "torii-introspect"
version = "0.1.0"
edition = "2021"
description = "Introspect indexer library for Torii"

[dependencies]
introspect-events.workspace = true
introspect-types.workspace = true
introspect-rust-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet-types-core.workspace = true
starknet-types-raw.workspace = true
torii.workspace = true
blake3.workspace = true
thiserror.workspace = true
hex.workspace = true
itertools.workspace = true
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "bigdecimal",
] }
async-trait.workspace = true
bigdecimal.workspace = true

torii-common.workspace = true
torii-sql = { workspace = true, features = ["postgres", "sqlite"] }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
