[package]
name = "torii-pathfinder"
version = "0.1.0"
edition = "2021"
description = "Pathfinding utilities for Torii"

[dependencies]
rusqlite = { version = "0.32.1" }
zstd = { version = "0.13.2", features = ["experimental"] }
serde.workspace = true
bincode = { workspace = true, features = ["serde"] }
thiserror.workspace = true
rand = "0.8.5"
starknet-types-raw = { workspace = true, features = ["serde"] }
torii-types.workspace = true

# Etl dependencies
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
torii = { workspace = true, optional = true }

[lints]
workspace = true

[features]
etl = ["dep:async-trait", "dep:anyhow", "dep:torii"]
