[package]
name = "torii-test-utils"
version = "0.1.0"
edition = "2021"
description = "Test utilities for Torii runtime"
authors = ["Torii Runtime <dev@torii.rs>"]
license = "Apache-2.0"

[dependencies]
alphanumeric-sort = "1.5.3"
async-trait.workspace = true
resolve-path.workspace = true
serde.workspace = true
serde_json.workspace = true
dojo-introspect.workspace = true
introspect-types.workspace = true
starknet-types-raw.workspace = true
