[package]
name = "torii-common"
version = "0.1.0"
edition = "2021"
description = "Common utilities for Torii token indexers"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
starknet.workspace = true
starknet-types-raw.workspace = true
primitive-types.workspace = true
thiserror.workspace = true

[lints]
workspace = true
