[package]
name = "torii-controllers-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
torii.workspace = true
torii-runtime-common.workspace = true
torii-sql.workspace = true

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
metrics.workspace = true
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "any",
] }
starknet-types-raw.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
