[package]
name = "torii-erc20"
version = "0.1.0"
edition = "2021"
description = "ERC20 token indexer library for Torii"

[dependencies]
# Torii core
torii.workspace = true
torii-common.workspace = true
torii-types.workspace = true

# Async
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true

starknet-types-raw.workspace = true
starknet.workspace = true

# Storage
rusqlite = { workspace = true }
tokio-postgres = "0.7"

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Encoding
hex.workspace = true
primitive-types.workspace = true

# gRPC/Protobuf
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
chrono.workspace = true

# Streaming
async-stream.workspace = true
futures.workspace = true

# Web framework
axum.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
metrics.workspace = true
thiserror.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
