[package]
name = "torii-erc721"
version = "0.1.0"
edition = "2021"
description = "ERC721 NFT token indexer library for Torii"

[dependencies]
# Torii core
torii = { path = "../.." }
torii-common = { path = "../torii-common" }
torii-sql = { path = "../sql", features = ["postgres", "sqlite"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Starknet
starknet = "0.17"
starknet-types-raw.workspace = true
primitive-types.workspace = true

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encoding
hex = "0.4"

# gRPC/Protobuf
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
chrono = "0.4"

# Streaming
async-stream = "0.3"
futures = "0.3"

# Web framework
axum = "0.7"

# Utilities
anyhow = "1.0"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
