[package]
name = "torii-log-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
torii.workspace = true

# Async
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true

# gRPC and protobuf
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# HTTP (use torii's re-exported axum)
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Utils
anyhow.workspace = true
chrono.workspace = true

starknet-types-raw.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
