[package]
name = "torii-sql-sink"
version = "0.1.0"
edition = "2021"

[dependencies]
# Torii core
torii.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Database
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "any",
] }

# gRPC
tonic.workspace = true
tonic-web.workspace = true
prost.workspace = true
prost-types.workspace = true
async-stream.workspace = true
futures.workspace = true

# Web framework
axum = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true

# Blockchain
starknet-types-raw.workspace = true

# Utilities
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
